--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # Supabase Configuration
 NEXT_PUBLIC_SUPABASE_URL=your-project-url
-NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY=sb_publishable_... or anon key
+NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY=sb_publishable_... or
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
